--- a/ud82/src/css/scss/_navmenu.scss
+++ b/ud82/src/css/scss/_navmenu.scss
@@ -3,8 +3,9 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 75px;
-  background: #7a52b3;
+  padding-top: 23px;
+  padding-bottom: 19px;
+  background: $springtimeRain;
 }
 
 .navbar__wrap {
@@ -23,16 +24,19 @@
 
 .logo {
   text-decoration: none;
-  color: #fff;
+  color: $white;
   font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
   display: flex;
   align-items: center;
 }
-
+.menu {
+  background-color: $white;
+}
 .menu > li > a {
   text-decoration: none;
+  color:$carbonFiber;
 }
 
 .navbar__wrap .menu {
@@ -46,13 +50,14 @@
 
 .navbar__wrap .menu > li > a {
   display: flex;
+  font-weight: bold;
   align-items: center;
   padding: 0 20px;
-  color: rgba(255, 255, 255, 0.7);
+  color: $carbonFiber;
 }
 
 .navbar__wrap .menu > li > a:hover {
-  color: rgba(255, 255, 255, 1);
+  color: $white;
 }
 
 @media (max-width: 1000px) {
@@ -75,7 +80,7 @@
     width: 30px;
     height: 3px;
     margin: 6px auto;
-    background-color: #fff;
+    background-color: $white;
     transition: 0.2s;
   }
 
@@ -85,7 +90,7 @@
     left: -100%;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: $white;
     z-index: 100;
     display: flex;
     transition: 0.3s;
@@ -101,7 +106,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 50px 0;
     overflow: auto;
   }
