--- a/ud82/src/css/scss/_navmenu.scss
+++ b/ud82/src/css/scss/_navmenu.scss
@@ -6,6 +6,7 @@
   padding-top: 23px;
   padding-bottom: 19px;
   background: $springtimeRain;
+  z-index: 999;
 }
 
 .navbar__wrap {
@@ -31,36 +32,36 @@
   display: flex;
   align-items: center;
 }
-.menu {
+.menu > ul {
   background-color: $white;
 }
-.menu > li > a {
+.menu > ul >li > a {
   text-decoration: none;
   color:$carbonFiber;
 }
 
-.navbar__wrap .menu {
+.navbar__wrap .menu > ul {
   display: flex;
 }
 
-.navbar__wrap .menu > li {
+.navbar__wrap .menu > ul > li {
   display: flex;
   align-items: stretch;
 }
 
-.navbar__wrap .menu > li > a {
+.navbar__wrap .menu > ul > li > a {
   display: flex;
   font-weight: bold;
   align-items: center;
-  padding: 0 20px;
   color: $carbonFiber;
+  transition-duration: 500ms;
 }
 
-.navbar__wrap .menu > li > a:hover {
-  color: $white;
+.navbar__wrap .menu > ul > li > a:hover {
+  background-color: $philippineYellow;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1140px) {
   .navbar__wrap .menu {
     display: none;
   }
@@ -80,13 +81,13 @@
     width: 30px;
     height: 3px;
     margin: 6px auto;
-    background-color: $white;
+    background-color: $carbonFiber;
     transition: 0.2s;
   }
 
   .popup {
     position: fixed;
-    top: 75px;
+    top: 88px;
     left: -100%;
     width: 100%;
     height: 100%;
@@ -111,11 +112,11 @@
     overflow: auto;
   }
 
-  .popup .menu > li {
+  .popup .menu > ul > li {
     width: 100%;
   }
 
-  .popup .menu > li > a {
+  .popup .menu > ul > li > a {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -125,7 +126,7 @@
     color: #3f3f3f;
   }
 
-  .popup .menu > li > a:hover {
+  .popup .menu > ul > li > a:hover {
     background-color: rgba(122, 82, 179, 0.1);
   }
 
