--- a/ud82/src/css/scss/_root.scss
+++ b/ud82/src/css/scss/_root.scss
@@ -3,3 +3,11 @@ $philippineYellow: #ffcb00;
 $stoneColdGray: #575656;
 $carbonFiber: #2d2d2d;
 $white: #fff;
+$brandBlack: #080D11;
+$brandGray: #737373;
+
+
+body{
+    background-color: $springtimeRain;
+    color: $carbonFiber;
+}
